CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2002-2015 by Bill Kendrick and others
bill@newbreedsoftware.com
http://www.tuxpaint.org/

$Id$

201x.xxx.x (0.9.23)

  * New shapes
    ----------
    * Stars
      Pere Pujal i Carabantes

  * Documentation updates
    ---------------------
    * Made stamp controls (size, flip, mirror) section clearer.
      Fixes https://sourceforge.net/p/tuxpaint/bugs/182/

  * New locales
    -----------
    * Bengali
      Provided by chandrakant dhutadmal

    * Bodo
      Provided by chandrakant dhutadmal

    * Dogri
      Provided by chandrakant dhutadmal

    * Kashmiri (Devanagari)
    * Kashmiri (Perso-Arabic)
      Provided by chandrakant dhutadmal

    * Sindhi (Devanagari)
    * Sindhi (Perso-Arabic)
      Provided by chandrakant dhutadmal

    * Urdu
      Provided by chandrakant dhutadmal

  * Localization Updates:
    ---------------------
    * Danish translation
      Joe Hansen <joedalton2@yahoo.dk>

    * Estonian translation
      Sven Ollino <sven.ollino@gmail.com>

    * French translation
      Chion Jacques <jacques.chion@orange.fr> 

    * Gaelic (Irish) translation
      Kevin Scannell <kscanne@gmail.com>

    * Galician translation
      Miguel Bouzada

    * Georgian translation
      Gia Shervashidze <giasher@gmail.com>

    * Icelandic translation
      Sveinn í Felli <sv1@fellsnet.is>

    * Korean translation
      Mark K. Kim <mkkim214@gmail.com>

    * Russian translaton
      Yuri Kozlov

    * Scottish translation
      Fòram na Gàidhlig

    * Thai translation
      Nudjaree <poonim_p@hotmail.com>


2014.August.5 (0.9.22)

  * New Tools:
    ----------
    * Label - A tool to add text to a drawing, which can be modified or
      moved later.
      By Arunodai Reddy Vudem (GSOC 2008)
      With modifications and integration by
      Pere Pujal i Carabantes <pere@fornol.no-ip.org>

  * New Magic Tools:
    ----------------